crates/qubit-macros/tests/ui/handler-non-async.stderr
error: handlers must be async
 --> tests/ui/handler-non-async.rs:4:1
  |
4 | fn my_handler() {}
  | ^^^^^^^^^^^^^^^
