crates/qubit-macros/tests/ui/handler-non-async.rs
use qubit_macros::handler;

#[handler(query)]
fn my_handler() {}

fn main() {}
